--- a/FSIRunner.fsproj
+++ b/FSIRunner.fsproj
@@ -43,17 +43,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="RunnerTypes.fs" />
+    <Compile Include="Types.fs" />
     <Compile Include="Watcher.fs" />
-    <Compile Include="FSIRunner.fs" />
-    <Compile Include="FSIRunner.fsx" />
     <Compile Include="TypeScan.fs" />
     <Compile Include="TypeScan.fsx" />
+    <Compile Include="Runner.fs" />
+    <Compile Include="Runner.fsx" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
-    <None Include="packages.config" />
     <None Include="TestPlugin.fsx" />
     <None Include="TestRunner.fsx" />
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
