NancySample: rename Watch to StartRunner
- Name doesn't matter, but StartRunner is more descriptive

--- a/NancyWebSample/NancyWebSample.fsproj
+++ b/NancyWebSample/NancyWebSample.fsproj
@@ -63,8 +63,8 @@
     <Compile Include="Program.fs" />
     <None Include="TestsPlugin.fsx" />
     <None Include="WebPlugin.fsx" />
-    <None Include="Watch.fsx" />
     <None Include="Project.fsx" />
+    <None Include="StartRunner.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="views\" />
