--- a/FSIRunner.Tests/FSIRunner.Tests.fsproj
+++ b/FSIRunner.Tests/FSIRunner.Tests.fsproj
@@ -7,6 +7,8 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>FSIRunner.Tests</RootNamespace>
     <AssemblyName>FSIRunner.Tests</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,6 +33,15 @@
     <Externalconsole>true</Externalconsole>
     <Tailcalls>true</Tailcalls>
   </PropertyGroup>
+  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
+  <ItemGroup>
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="TestRunner.fs" />
+    <Compile Include="TestTypeScan.fs" />
+    <Compile Include="TestTestUtil.fs" />
+    <None Include="paket.dependencies" />
+    <Compile Include="Program.fs" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core" />
@@ -40,27 +51,14 @@
     <Reference Include="Fuchu">
       <HintPath>packages\Fuchu\lib\Fuchu.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="TestRunner.fs" />
-    <Compile Include="TestTypeScan.fs" />
-    <Compile Include="TestTestUtil.fs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
-  <ItemGroup>
-    <None Include="paket.dependencies" />
-    <Compile Include="Program.fs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\FSIRunner\FSIRunner.fsproj">
       <Project>{41ED9B83-FF1E-44E0-ABF7-73413871E5FB}</Project>
       <Name>FSIRunner</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="TempTestDir\" />
-    <Folder Include="TempTestDir\Dir1\" />
-    <Folder Include="TempTestDir\Dir2\" />
+    <Content Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
