Tests: add RunTests.fsx, enables test run from FSI and on windows
- In windows, this is the only way to run the tests, since running them from the compiled assembly will fail with a referencing error that I haven't figured out
- Had to fix some issues in the typescan tests to make this work.   Amusingly, typescan has to be functioning properly for this run mode to even work.

--- a/FSIRunner.Tests/FSIRunner.Tests.fsproj
+++ b/FSIRunner.Tests/FSIRunner.Tests.fsproj
@@ -41,6 +41,10 @@
     <Compile Include="TestTestUtil.fs" />
     <None Include="paket.dependencies" />
     <Compile Include="Program.fs" />
+    <Content Include="App.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <None Include="RunTests.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -55,10 +59,5 @@
       <Project>{41ED9B83-FF1E-44E0-ABF7-73413871E5FB}</Project>
       <Name>FSIRunner</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="App.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
 </Project>
