Add new plugin configuration syntax and GenProject plugin
- The GenProject plugin produces a project.fsx file from an FsProj file
- While not strictly necessary, this saves some otherwise tedious steps when adding files or references, since those changes would previously need to be re-done manually in Project.fsx
- This required some refactoring of how plugins are specified, because GenProject requires some additional configuration options; the refactoring rippled through to the watcher and plugin interface code, but things are more flexible now
- There are some spurious white spaces changes here; seems like re-indenting with visual studio isn't such a great idea, since it and Xamarin have conflicting ideas about FSharp style

--- a/FSIRunner.Tests/FSIRunner.Tests.fsproj
+++ b/FSIRunner.Tests/FSIRunner.Tests.fsproj
@@ -45,6 +45,11 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="RunTests.fsx" />
+    <None Include="TempTestDir\Plugin1.fsx" />
+    <None Include="TempTestDir\Plugin2.fsx" />
+    <None Include="TempTestDir\Dir1\SomeFile1.fs" />
+    <None Include="TempTestDir\Dir1\SomeFile2.fs" />
+    <None Include="TempTestDir\Dir2\SomeFile3.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -59,5 +64,8 @@
       <Project>{41ED9B83-FF1E-44E0-ABF7-73413871E5FB}</Project>
       <Name>FSIRunner</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="TempTestDir\" />
   </ItemGroup>
 </Project>
