--- a/FSIRunner/FSIRunner.fsproj
+++ b/FSIRunner/FSIRunner.fsproj
@@ -42,11 +42,11 @@
     <Compile Include="TypeScan.fsx" />
     <Compile Include="Runner.fs" />
     <Compile Include="Runner.fsx" />
+    <Compile Include="GenProject.fs" />
     <Compile Include="TestUtil.fs" />
-    <None Include="TestPlugin.fsx" />
-    <None Include="TestRunner.fsx" />
     <None Include="paket.dependencies" />
     <None Include="VariousTestFunctions.fsx" />
+    <None Include="GenProjectPlugin.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -57,5 +57,6 @@
     <Reference Include="FSharp.Compiler.Service">
       <HintPath>packages\FSharp.Compiler.Service\lib\net45\FSharp.Compiler.Service.dll</HintPath>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
 </Project>
