FunscriptSample: replace hello world port of ThreeJS example
http://threejs.org/examples/#canvas_camera_orthographic2

The cubes are black, need to fix that.

--- a/FunscriptSample/FunscriptSample.fsproj
+++ b/FunscriptSample/FunscriptSample.fsproj
@@ -59,6 +59,7 @@
     <None Include="FunscriptPlugins.fsx" />
     <None Include="web\index.html" />
     <Compile Include="WebMain.fs" />
+    <None Include="paket.lock" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
   <ItemGroup>
